fix: updated footer season links on mobile

--- a/src/components/shared/footer/Footer.scss
+++ b/src/components/shared/footer/Footer.scss
@@ -116,7 +116,7 @@
       .footer_policy {
         a {
           background-color: #131313;
-          width: 40px;
+          padding-inline: 1.5rem;
           height: 40px;
           display: flex;
           justify-content: center;
